# Cernere

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.linux.yaml  docker-compose.override.example.yaml  docker-compose.override.yaml  docker-compose.standalone.yaml  docker-compose.windows.yaml  docker-compose.yaml  env-cli.config.ts  package-lock.json  package.json
.github/workflows/: compile-check.yml  pages.yml  publish-packages.yml
demo/: package-lock.json  package.json
demo/src/: index.ts
docs/: auth_packages.md  composite_design.md  integration_guide.md  relay_design.md  service_interface.md  using-packages.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  global.css  main.tsx
migrations/: 001_initial.sql  002_google_auth_and_password.sql  003_mfa.sql  004_organizations.sql  005_operation_logs.sql  005_tool_auth_and_profiles.sql  007_service_registry.sql  008_data_optouts.sql  009_avatar_url_nullable.sql  010_managed_projects.sql  011_project_definitions_history.sql  012_imperativus_project_definition.sql  013_trusted_devices.sql  014_project_oauth_tokens.sql  015_relay_pairs.sql  016_memoria_project_definition.sql  017_memoria_managed_project_seed.sql  018_memoria_imperativus_relay_pair.sql  019_legatus_project_definition.sql  020_legatus_managed_project_seed.sql  021_legatus_actio_relay_pair.sql  022_passkeys.sql  023_oidc_clients.sql  024_ludellus_managed_project_seed.sql  025_memoria_blank_legacy_schema.sql  026_refresh_session_rotation.sql  027_glab_vantan_user_profile.sql  028_excubitor_launch_credentials.sql  029_project_credential_generation.sql  036_volputas_survey_responses.sql
review/: latest.json
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
review/2026-05-14/: AUTOFIX.md  (+6 more)
scripts/: generate-paseto-keypair.ts  migrate.sh
server/: .npmrc  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
site/: README.md  api.html  graph.html  index.html  review.html
spec/: README.md  auth-flows.md  commit-plan.md  peer-relay.md  project-connection-registry.md  project-management.md  secrets-runtime.md  security_design.md  user-auth-project-open.md  user-project-row.md  ws-protocol.md
src/: app_state.rs  auth.rs  commands.rs  config.rs  db.rs  env_auth.rs  error.rs  main.rs  mfa.rs  models.rs  redis_session.rs  relay.rs  routes.rs  service.rs  session_state.rs  ws.rs
(+215 files in other folders)
