[package]
name = "cernere"
version = "0.2.0"
edition = "2021"
description = "Cernere — stateful authentication, session management, and relay server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth & crypto
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
urlencoding = "2"
jsonwebtoken = "9"
bcrypt = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"
dashmap = "6"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# AWS SDK (SNS for SMS, SES for email)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sns = "1"
aws-sdk-sesv2 = "1"

# TOTP (Google/Microsoft Authenticator)
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
data-encoding = "2"

# Random code generation
rand = "0.8"
